--- a/musicplayer/style.css
+++ b/musicplayer/style.css
@@ -4,7 +4,8 @@
   font-family: 'Roboto', sans-serif;
 }
 #myProgress {
-  width: 420px;
+  /*width: 420px;*/
+    width: inherit;
    background-color: #d9d9f2; 
   cursor: pointer;
   border-radius: 10px;
